Dealing with consequences of prev. commit